--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@ a:hover{ text-decoration: no-underline }
 </style>
 </head>
 
+<body bgproperties="fixed" background="24.jpg" tppabs="http://www.5211314.22c.pw/24.jpg">
+ 
+
+
 <script language="JavaScript">
 var position = 0;
 function scroller() {
